--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -28,8 +28,8 @@
   class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
 
     <a *ngFor="let producto of productosService.productos_idx"
-     routerLink="/item" class="rk-item ae-masonry__item"
-      ><img src="assets/productos/{{producto.url}}.jpg" alt="" />
+     [routerLink]="['/item', producto.cod]" class="rk-item ae-masonry__item">
+      <img src="assets/productos/{{producto.url}}.jpg" alt="" />
       <div class="item-meta">
         <h2>{{ producto.titulo }}</h2>
         <p>{{ producto.categoria }}</p>
